bug 70341, Non-ASCII attachment filename is not MIME encoded if filename is short, or with no or other extensions r=ducarroz sr=sspitzer